SF Primes/src/objects/IMP_DataTableUISetting__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting for the Generic Data Table Component UI Setting</description>
    <fields>
        <fullName>MaxNumberOfSearchResults__c</fullName>
        <description>This controls the maximum records to be queried. Can be overridden by the component&apos;s query limit attribute.</description>
        <inlineHelpText>This controls the maximum records to be queried. Can be overridden by the component&apos;s query limit attribute.</inlineHelpText>
        <label>Max Number Of Search Results</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinNumberOfSearchCharacters__c</fullName>
        <label>Min Number Of Search Characters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfRecordsPerObject__c</fullName>
        <description>This will control by the number of records to show per page of the table. This can be overridden by the component&apos;s rowsPerPage attribute</description>
        <inlineHelpText>This will control by the number of records to show per page of the table. This can be overridden by the component&apos;s rowsPerPage attribute</inlineHelpText>
        <label>Number Of Records Per Object</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>IMP_DataTableUISetting</label>
</CustomObject>